@@ -2,24 +2,23 @@ package co.com.bancolombia.redis.repository.helper;
 
 import org.reactivecommons.utils.ObjectMapper;
 import org.springframework.data.domain.Example;
-import org.springframework.data.repository.CrudRepository;
+import org.springframework.data.keyvalue.repository.KeyValueRepository;
 import org.springframework.data.repository.query.QueryByExampleExecutor;
 
 import java.lang.reflect.ParameterizedType;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static java.util.stream.StreamSupport.stream;
 
-public abstract class RepositoryAdapterOperations<E, D, I, R extends CrudRepository<D, I> & QueryByExampleExecutor<D>> {
+public abstract class RepositoryAdapterOperations<E, D, I, R extends KeyValueRepository<D, I> & QueryByExampleExecutor<D>> {
     protected R repository;
     private final Class<D> dataClass;
     protected ObjectMapper mapper;
     private final Function<D, E> toEntityFn;
 
     @SuppressWarnings("unchecked")
-    public RepositoryAdapterOperations(R repository, ObjectMapper mapper, Function<D, E> toEntityFn) {
+    protected RepositoryAdapterOperations(R repository, ObjectMapper mapper, Function<D, E> toEntityFn) {
         this.repository = repository;
         this.mapper = mapper;
         ParameterizedType genericSuperclass = (ParameterizedType) this.getClass().getGenericSuperclass();
@@ -41,12 +40,12 @@ public abstract class RepositoryAdapterOperations<E, D, I, R extends CrudReposit
     }
 
     protected List<E> saveAllEntities(List<E> entities) {
-        List<D> list = entities.stream().map(this::toData).collect(Collectors.toList());
+        List<D> list = entities.stream().map(this::toData).toList();
         return toList(saveData(list));
     }
 
     public List<E> toList(Iterable<D> iterable) {
-        return stream(iterable.spliterator(), false).map(this::toEntity).collect(Collectors.toList());
+        return stream(iterable.spliterator(), false).map(this::toEntity).toList();
     }
 
     protected D saveData(D data) {
@@ -66,11 +65,10 @@ public abstract class RepositoryAdapterOperations<E, D, I, R extends CrudReposit
     }
 
     public List<E> findByExample(E entity) {
-        return toList(repository.findAll( Example.of(toData(entity))));
+        return toList(repository.findAll(Example.of(toData(entity))));
     }
 
-
-    public List<E> findAll(){
+    public List<E> findAll() {
         return toList(repository.findAll());
     }
 }
